--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 Changelog
 
+* 8/11/2019 - Large internal project refactor. As a result, new commands to install and execute the module. Details in the README.md.
+
 * 8/7/2019 - Took over development of this great dead project. Improved run time by a huge factor (it should run in just a few seconds total, vs. a few seconds PER addon update). Added clickable executables, so users don't have to run python in their terminal. Cleaned up lots of style and refactored some code.
 
 * 8/24/2018 - Added update message to notify if a new version of WoWAddonUpdater is available
