--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Changelog
 
+* 8/18/2019
+Added basic support for Classic addons from Curse.
+
 * 8/16/2019
 Squashed bugs!
 Fixed a major problem with subfolder extraction for archives i.e. you can now select folders again from the ElvUI repo!
