--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Changelog
 
+* 8/24/2019
+Fixed a folder naming issue with GitHub repository addons.
+
 * 8/18/2019
 Added basic support for Classic addons from Curse.
 
