--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Changelog
 
+* 10/6/2019 - v1.4.0
+Add support for WowAce classic addons.
+
 * 10/5/2019 - v1.3.0
 Add the ability to use a Windows-style addon directory path when using Windows, but calling the code from within Windows Subsystem for Linux.
 
