--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Changelog
 
+* 10/11/2019 - v1.4.2
+Use a new internal method of fetching GitHub addons which appears to be more reliable, and fails less often.
+
 * 10/11/2019 - v1.4.1
 Fix for an issue involving subfolders and archives that aren't from git (GitHub, ElvUI). For example, you can now correctly extract single subfolders from Curse, etc.
 
