Update VERSION and changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 Changelog
+* 03/04/2020 - v1.6.0
+Finally start logging exceptions properly. Output should look familiar in the console, but exceptions and detailed debug information is available in a log file.
+Also fixes an issue with curse issuing reCaptcha challenges because cloudscraper was out of date.
+
 * 01/19/2020 - v1.5.2
 Improve the version check to actually check for latest releases and compare a new VERSION file. Should alert users only when a new release has been published, not just any change to master.
 
