--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 Changelog
+* 03/11/2020 - v1.6.2
+Upgrade cloudscraper version and improve internal logging format.
+
 * 03/04/2020 - v1.6.1
 Add current version logging and a broad exception clause in the main method.
 
